# podium

./: .env.example  .gitignore  .golangci.yml  AUTONOMOUS_LOOP_AUDIT.md  BUILD-GAPS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  OPERATIONS.md  README.md  RELEASING.md  REMAINING_GAPS.md  SECURITY.md  TEST-GAPS.md  TEST_INFRASTRUCTURE_PLAN.md  UNBLOCK.md  close-build-gaps.py  docker-compose.yml  go.mod  go.sum  test.env.example
.claude/rules/: doc-diagram-style.md  doc-style.md  release-process.md  test-coverage.md
.claude/workflows/: change-proposal.js  implement-proposal-build.js  implement-proposal.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bench.yml  codeql.yml  docs.yml  integration-live.yml  live-external.yml  nightly.yml  release.yml  spec-coverage.yml  test-fast.yml  test-medium.yml  test-slow.yml  test.yml
cmd/podium-mcp/: audit_redact_test.go  audit_sink_route_test.go  audit_trace_redact_test.go  cache_mode_test.go  cliconfig.go  client_version_test.go  config_env_test.go  coverage_gaps_test.go  degraded_network_test.go  descriptions.go  descriptions_test.go  error_envelope.go  error_envelope_test.go  etag_test.go  fetch_json_test.go  hangup_unix.go  hangup_windows.go  head_revalidate_test.go  health.go  health_test.go  helpers_extra_test.go  identity.go  identity_test.go  large_resources.go  large_resources_auth_test.go  large_resources_test.go  leak_test.go  load_artifact_test.go  load_domain.go  load_domain_test.go  local_search.go  local_search_test.go  main.go  (+36 more)
deploy/: Dockerfile  grafana-dashboard.json  runbook.md
docs/: Gemfile  _config.yml  index.md  operator-guide.md  progressive-adoption.md  quickstart.md  team-rollout.md
proposals/: 0001-server-side-request-authentication.md  0002-runtime-tenant-provisioning.md  0003-multi-harness-marketplace-publishing.md  0004-webhook-hardening.md  0005-marketplace-as-a-podium-sync-target-kind.md
scripts/: install-dev-deps.sh  preflight-minio.sh  preflight-postgres.sh
sdks/podium-py/: README.md  pyproject.toml
sdks/podium-py/podium/: __init__.py  _config.py  _oauth.py  _overlay.py  client.py
sdks/podium-py/tests/: test_client.py  test_errors.py  test_load_domain_overlay.py  test_resolution_overlay_login.py
spec/: 00-quickstart.md  01-overview.md  02-architecture.md  03-disclosure-surface.md  04-artifact-model.md  05-meta-tools.md  06-mcp-server.md  07-external-integration.md  08-audit-and-observability.md  09-extensibility.md  10-mvp-build-sequence.md  11-verification.md  12-operational-risks-and-mitigations.md  13-deployment.md  14-common-scenarios.md  README.md  glossary.md  spec old.md  spec.critique.md  spec.md
test/: README.md  manual-validation.md
testdata/: README.md
web/: app.js  index.html  style.css  web.go  web_test.go
(+1018 files in other folders)
