[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "podium"
version = "0.0.0.dev0"
description = "Thin HTTP client for the Podium registry."
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["podium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
