[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The plain "podium" name was taken; the
# Python import name stays `podium` (PEP 8 prefers single-word
# package names) so `from podium import Client` still works after
# `pip install podium-sdk`. Same pattern as Pillow / BeautifulSoup4.
name = "podium-sdk"
version = "0.1.0.dev0"
description = "Thin HTTP client for the Podium registry."
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["podium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
